# bash-create-well-known-c-libs

./: README.md  angelscript.sh  blake.sh  cimgui.sh  dascript.sh  flecs.sh  ixwebsocket.sh  lib.sh  lua.sh  luajit.sh  mbedtls.sh  raylib.sh  raylib_nuke.sh  rlimgui.sh  wren.sh  zlib.sh
the_lua/: CMakeLists.txt
the_luajit/: CMakeLists.txt
the_raylib_nuklear/: CMakeLists.txt
the_rlimgui/: .gitignore  CMakeLists.txt
the_wren/: CMakeLists.txt
